--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header-container">
+        <div class="header">
+            <div class="logo">
+                <h3 class="header-title">G3 Architects</h3>
+            </div>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Sign Up</a></li>
+                    <li><a href="#">Log in</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="container">
+            <div class="header-text">
+                <h1 class="header-title">Brand New <br> Group of Architects </h1>
+                <div class="header-dec">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</div>
+                <button class="btn">Explore more</button>
+            </div>
+            <div class="header-img">
+                <img src="images/banner.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
