--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Start of header section -->
     <header class="header-container">
         <div class="header">
             <div class="logo">
-                <h3 class="header-title">G3 Architects</h3>
+                <h3 class="logo-title">G3 Architects</h3>
             </div>
             <nav class="navigation">
                 <ul>
@@ -22,7 +23,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="container">
+        <section class="banner-section">
             <div class="header-text">
                 <h1 class="header-title">Brand New <br> Group of Architects </h1>
                 <div class="header-dec">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</div>
@@ -31,7 +32,35 @@
             <div class="header-img">
                 <img src="images/banner.png" alt="">
             </div>
-        </div>
+        </section>
     </header>
+    <!-- End of header section -->
+    <!-- Start of main section -->
+    <main>
+    <!-- Start of feature section -->
+        <section class="features container">
+            <div class="feature-img-section">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="feature-text-section">
+                <h1 class="feature-section-header"> <span class="gray">Quick   list</span> <span class="black">of Our </span><br>
+                    <span class="orange">Features</span>
+                </h1>
+                <p class="feature-dec">There are many variations of passages of Lorem Ipsum available,<br>
+                    but the majority have suffered alteration in some form, by injected <br>
+                    humour, or randomised words which don't look even</p>
+                <button class="btn">Explore more</button>
+            </div>
+        </section>
+    <!-- End of feature section -->
+    <!-- Start of feature you will love and enjoy -->
+    <section class="love_enjoy love_container">
+        <h1 class="love-title">Features you will <br> love & enjoy</h1>
+    </section>
+    </main>
+    <!-- End of main section -->
 </body>
 </html>
