love and enjoy section added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1 class="feature-section-header"> <span class="gray">Quick   list</span> <span class="black">of Our </span><br>
                     <span class="orange">Features</span>
                 </h1>
-                <p class="feature-dec">There are many variations of passages of Lorem Ipsum available,<br>
+                <p class="dec">There are many variations of passages of Lorem Ipsum available,<br>
                     but the majority have suffered alteration in some form, by injected <br>
                     humour, or randomised words which don't look even</p>
                 <button class="btn">Explore more</button>
@@ -58,7 +58,55 @@
     <!-- End of feature section -->
     <!-- Start of feature you will love and enjoy -->
     <section class="love_enjoy love_container">
-        <h1 class="love-title">Features you will <br> love & enjoy</h1>
+        <aside class="love_enjoy_info">
+            <div class="love_enjoy_header">
+                <h1 class="love-title">Features you will <br> love & enjoy</h1>
+                <p class="dec">There are many variations of passages of Lorem Ipsum available, but the <br> majority have suffered alteration in some form, by injected humour, or <br>
+                    randomised words which don't look even</p>
+            </div>
+            <div class="love_enjoy_description">
+                <div>
+                    <h3 class="header_description">
+                        Dexktop & Mobile Version
+                    </h3>
+                    <p class="love_enjoy_pera">
+                        There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>injected humour, or randomised...........
+                    </p>
+                </div>
+                <div>
+                    <h3 class="header_description">
+                        Drag & Drop Builder
+                    </h3>
+                    <p class="love_enjoy_pera">
+                        There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>injected humour, or randomised...........
+                    </p>
+                </div>
+                <div>
+                    <h3 class="header_description">
+                        Awesome Modern Design
+                    </h3>
+                    <p class="love_enjoy_pera">
+                        There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>injected humour, or randomised...........
+                    </p>
+                </div>
+                <div>
+                    <h3 class="header_description">
+                        Super Easy to Edit
+                    </h3>
+                    <p class="love_enjoy_pera">
+                        There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>injected humour, or randomised...........
+                    </p>
+                </div>
+            </div>
+        </aside>
+        <aside class="love_enjoy_img">
+            <div class="img-sec">
+                <img src="images/architect.png" alt="">
+            </div>
+            <div class="img-btn">
+                <button class="btn-1">10+Year <span>Experience</span></button>
+            </div>
+        </aside>
     </section>
     </main>
     <!-- End of main section -->
