some facts added

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
     <section class="love_enjoy love_container">
         <aside class="love_enjoy_info">
             <div class="love_enjoy_header">
-                <h1 class="love-title">Features you will <br> love & enjoy</h1>
-                <p class="dec">There are many variations of passages of Lorem Ipsum available, but the <br> majority have suffered alteration in some form, by injected humour, or <br>
-                    randomised words which don't look even</p>
+                <h1 class="love_enjoy_title">Features you will <br> love & enjoy</h1>
+                <p class="love_enjoy_dec">There are many variations of passages of lorem ipsum available, but the majority have sufferd alterantion in some form, by injected humore or thaere are many variatios of passeges of lorem inpum</p>
             </div>
             <div class="love_enjoy_description">
                 <div>
@@ -70,7 +69,7 @@
                         Dexktop & Mobile Version
                     </h3>
                     <p class="love_enjoy_pera">
-                        There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>injected humour, or randomised...........
+                        There are many variations of passages of lorem ipsum available, but the majority have sufferd alterantion in some form, by injected humore or thaere are many variatios of passeges of lorem inpum
                     </p>
                 </div>
                 <div>
@@ -78,7 +77,7 @@
                         Drag & Drop Builder
                     </h3>
                     <p class="love_enjoy_pera">
-                        There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>injected humour, or randomised...........
+                        There are many variations of passages of lorem ipsum available, but the majority have sufferd alterantion in some form, by injected humore or thaere are many variatios of passeges of lorem inpum
                     </p>
                 </div>
                 <div>
@@ -86,7 +85,7 @@
                         Awesome Modern Design
                     </h3>
                     <p class="love_enjoy_pera">
-                        There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>injected humour, or randomised...........
+                        There are many variations of passages of lorem ipsum available, but the majority have sufferd alterantion in some form, by injected humore or thaere are many variatios of passeges of lorem inpum
                     </p>
                 </div>
                 <div>
@@ -94,7 +93,7 @@
                         Super Easy to Edit
                     </h3>
                     <p class="love_enjoy_pera">
-                        There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration in some form, by <br>injected humour, or randomised...........
+                        There are many variations of passages of lorem ipsum available, but the majority have sufferd alterantion in some form, by injected humore or thaere are many variatios of passeges of lorem inpum
                     </p>
                 </div>
             </div>
@@ -108,6 +107,37 @@
             </div>
         </aside>
     </section>
+    <!-- End of love and Enjoy section -->
+    <!-- start of some facts section -->
+    <section class="facts facts_container">
+        <h1 class="facts_title">Some facts</h1>
+        <div class="fact_dec"><p>
+            There are many variations of passages of lorem ipsoum abailable <br> but the majorigyu hav esuffered alterenationa
+        </p></div>
+        <div class="icon_section">
+            <div class="icons">
+                <img src="images/icons/ribon.png" alt="">
+                <h1 class="icon-text">54</h1>
+                <p class="icon-info">Awards Winning</p>
+            </div>
+            <div class="icons">
+                <img src="images/icons/projects.png" alt="">
+                <h1 class="icon-text">1458</h1>
+                <p class="icon-info">Projects Finished</p>
+            </div>
+            <div class="icons">
+                <img src="images/icons/customers.png" alt="">
+                <h1 class="icon-text">590</h1>
+                <p class="icon-info">Clients Worked</p>
+            </div>
+            <div class="icons">
+                <img src="images/icons/email.png" alt="">
+                <h1 class="icon-text">22578</h1>
+                <p class="icon-info">Email Send</p>
+            </div>
+        </div>
+    </section>
+    <!-- End of some facts section -->
     </main>
     <!-- End of main section -->
 </body>
