--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
         </div>
     </section>
     <!-- End of some facts section -->
+    <!-- Start of our client review Section -->
+    
+    <!-- End of our client review Section -->
     </main>
     <!-- End of main section -->
 </body>
