--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@
     </section>
     <!-- End of some facts section -->
     <!-- Start of our client review Section -->
-    
+    <section class="what_our_client_says">
+        <h2 class="client_says_title">What Our Client Says?</h2>
+    </section>
     <!-- End of our client review Section -->
     </main>
     <!-- End of main section -->
