--- a/index.html
+++ b/index.html
@@ -139,8 +139,43 @@
     </section>
     <!-- End of some facts section -->
     <!-- Start of our client review Section -->
-    <section class="what_our_client_says">
-        <h2 class="client_says_title">What Our Client Says?</h2>
+    <section class="testimonial">
+        <h2 class="testimonial_title">What Our Client Says?</h2>
+        <div class="testimonial-row">
+            <div class="testimonial-col">
+                <div class="user">
+                    <img src="img-1.jpg" alt="">
+                    <div class="user-info">
+                        <h4>KEN NORMAN <i class="fa-brands fa-twitter"></i></h4>
+                        <small>@kennoroman</small>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae blanditiis consequatur eaque est tenetur dolores harum quam. Nam, facilis. Rerum autem inventore, minus consequatur eum adipisci aperiam sed natus vero quisquam numquam ducimus
+                    architecto sit aliquam, laborum, libero quidem optio.</p>
+            </div>
+
+            <div class="testimonial-col">
+                <div class="user">
+                    <img src="img-2.jpg" alt="">
+                    <div class="user-info">
+                        <h4>Liara Karian<i class="fa-brands fa-twitter"></i></h4>
+                        <small>@laiarakarian</small>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae blanditiis cfacilis. Rerum autem inventore, minus consequatur eum adipisci aper.</p>
+            </div>
+
+            <div class="testimonial-col">
+                <div class="user">
+                    <img src="img-3.jpg" alt="">
+                    <div class="user-info">
+                        <h4>David nip <i class="fa-brands fa-twitter"></i></h4>
+                        <small>@nipdavid</small>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae blanditiis consequatur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet facere nihil. eaque est tenetur dolores harum quam. Nam, facilis. Rerum autem inv.</p>
+            </div>
+        </div>
     </section>
     <!-- End of our client review Section -->
     </main>
