--- a/index.html
+++ b/index.html
@@ -144,36 +144,32 @@
         <div class="testimonial-row">
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="img-1.jpg" alt="">
+                    <img src="images/img-1.jpg" alt="">
                     <div class="user-info">
-                        <h4>KEN NORMAN <i class="fa-brands fa-twitter"></i></h4>
-                        <small>@kennoroman</small>
+                        <h4>KEN NORMAN </h4>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae blanditiis consequatur eaque est tenetur dolores harum quam. Nam, facilis. Rerum autem inventore, minus consequatur eum adipisci aperiam sed natus vero quisquam numquam ducimus
-                    architecto sit aliquam, laborum, libero quidem optio.</p>
+                <p>Always available, extremely knowledgeable, and a tremendous "can-do" attitude. Our company was on a tight timeline and strict budget to create a first-class mobile interpretation app, and Will was the perfect partner. His guidance and advice was invaluable in producing that app which easily exceeded my expectations... the entire company was thrilled with it! Without any hesitation... highly recommended.</p>
             </div>
 
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="img-2.jpg" alt="">
+                    <img src="images/img-2.jpg" alt="">
                     <div class="user-info">
-                        <h4>Liara Karian<i class="fa-brands fa-twitter"></i></h4>
-                        <small>@laiarakarian</small>
+                        <h4>Liara Karian</h4>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae blanditiis cfacilis. Rerum autem inventore, minus consequatur eum adipisci aper.</p>
+                <p>Always available, extremely knowledgeable, and a tremendous "can-do" attitude. Our company was on a tight timeline and strict budget to create a first-class mobile interpretation app, and Will was the perfect partner. His guidance and advice was invaluable in producing that app which easily exceeded my expectations... the entire company was thrilled with it! Without any hesitation... highly recommended.</p>
             </div>
 
             <div class="testimonial-col">
                 <div class="user">
-                    <img src="img-3.jpg" alt="">
+                    <img src="images/img-3.jpg" alt="">
                     <div class="user-info">
-                        <h4>David nip <i class="fa-brands fa-twitter"></i></h4>
-                        <small>@nipdavid</small>
+                        <h4>David nip </h4>
                     </div>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae blanditiis consequatur Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam amet facere nihil. eaque est tenetur dolores harum quam. Nam, facilis. Rerum autem inv.</p>
+                <p>Always available, extremely knowledgeable, and a tremendous "can-do" attitude. Our company was on a tight timeline and strict budget to create a first-class mobile interpretation app, and Will was the perfect partner. His guidance and advice was invaluable in producing that app which easily exceeded my expectations... the entire company was thrilled with it! Without any hesitation... highly recommended.</p>
             </div>
         </div>
     </section>
