--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
         </div>
-        <section class="banner-section">
+        <section class="banner-section hide">
             <div class="header-text">
                 <h1 class="header-title">Brand New <br> Group of Architects </h1>
                 <div class="header-dec">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</div>
@@ -38,7 +38,7 @@
     <!-- Start of main section -->
     <main>
     <!-- Start of feature section -->
-        <section class="features container">
+        <section class="features container hide">
             <div class="feature-img-section">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
@@ -57,7 +57,7 @@
         </section>
     <!-- End of feature section -->
     <!-- Start of feature you will love and enjoy -->
-    <section class="love_enjoy love_container">
+    <section class="love_enjoy love_container hide">
         <aside class="love_enjoy_info">
             <div class="love_enjoy_header">
                 <h1 class="love_enjoy_title">Features you will <br> love & enjoy</h1>
@@ -109,7 +109,7 @@
     </section>
     <!-- End of love and Enjoy section -->
     <!-- start of some facts section -->
-    <section class="facts facts_container">
+    <section class="facts facts_container hide">
         <h1 class="facts_title">Some facts</h1>
         <div class="fact_dec"><p>
             There are many variations of passages of lorem ipsoum abailable <br> but the majorigyu hav esuffered alterenationa
@@ -139,7 +139,7 @@
     </section>
     <!-- End of some facts section -->
     <!-- Start of our client review Section -->
-    <section class="testimonial">
+    <section class="testimonial hide">
         <h2 class="testimonial_title">What Our Client Says?</h2>
         <div class="testimonial-row">
             <div class="testimonial-col">
@@ -174,7 +174,27 @@
         </div>
     </section>
     <!-- End of our client review Section -->
+    <!-- Start of our Sponsership Section -->
+    <section class="Sponspors hide">
+        <div class="sponsor_header">
+            <h1 class="sponsor_title">Our Sponspors</h1>
+            <div class="sponsor_dec">
+                <p>There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered alteration.</p>
+            </div>
+        </div>
+        <div class="sponsor_img">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+        </div>
+    </section>
+    <!-- End of our Sponsership Section -->
     </main>
     <!-- End of main section -->
+    <footer class="footer hide">
+        <p class="footer-text">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 </html>
