media quary added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </nav>
         </div>
-        <section class="banner-section hide">
+        <section class="banner-section">
             <div class="header-text">
                 <h1 class="header-title">Brand New <br> Group of Architects </h1>
                 <div class="header-dec">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br> some form, by injected humour, or randomised words which don't look even</div>
@@ -38,7 +38,7 @@
     <!-- Start of main section -->
     <main>
     <!-- Start of feature section -->
-        <section class="features container hide">
+        <section class="features container">
             <div class="feature-img-section">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
@@ -46,7 +46,7 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="feature-text-section">
-                <h1 class="feature-section-header"> <span class="gray">Quick   list</span> <span class="black">of Our </span><br>
+                <h1 class="feature-section-header "> <span class="gray">Quick   list</span> <span class="black">of Our </span><br>
                     <span class="orange">Features</span>
                 </h1>
                 <p class="dec">There are many variations of passages of Lorem Ipsum available,<br>
@@ -57,7 +57,7 @@
         </section>
     <!-- End of feature section -->
     <!-- Start of feature you will love and enjoy -->
-    <section class="love_enjoy love_container hide">
+    <section class="love_enjoy love_container">
         <aside class="love_enjoy_info">
             <div class="love_enjoy_header">
                 <h1 class="love_enjoy_title">Features you will <br> love & enjoy</h1>
