mobile's media query added

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
     <!-- End of love and Enjoy section -->
     <!-- start of some facts section -->
-    <section class="facts facts_container hide">
+    <section class="facts facts_container">
         <h1 class="facts_title">Some facts</h1>
         <div class="fact_dec"><p>
             There are many variations of passages of lorem ipsoum abailable <br> but the majorigyu hav esuffered alterenationa
@@ -139,7 +139,7 @@
     </section>
     <!-- End of some facts section -->
     <!-- Start of our client review Section -->
-    <section class="testimonial hide">
+    <section class="testimonial">
         <h2 class="testimonial_title">What Our Client Says?</h2>
         <div class="testimonial-row">
             <div class="testimonial-col">
@@ -175,7 +175,7 @@
     </section>
     <!-- End of our client review Section -->
     <!-- Start of our Sponsership Section -->
-    <section class="Sponspors hide">
+    <section class="Sponspors">
         <div class="sponsor_header">
             <h1 class="sponsor_title">Our Sponspors</h1>
             <div class="sponsor_dec">
@@ -193,7 +193,7 @@
     <!-- End of our Sponsership Section -->
     </main>
     <!-- End of main section -->
-    <footer class="footer hide">
+    <footer class="footer">
         <p class="footer-text">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
